# resfo-utilities

./: .mypy.ini  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: benchmarks.yml  publish_to_pypi.yml  testing.yml  typing.yml
benchmarks/: CMakeLists.txt  bench_bounding_boxes.cpp  bench_find_cell.cpp  bench_grid_search.cpp  bench_helpers.hpp
docs/source/: api_reference.rst  conf.py  glossary.rst  index.rst  user_guide.rst
src/resfo_utilities/: __init__.py  _cornerpoint_grid.py  _geometry.py  _rft_reader.py  _summary_reader.py
src/resfo_utilities/_cpp/: bench_bounding_boxes.cpp  bench_find_cell.cpp  bench_helpers.hpp  bindings.cpp  column_interval_tree.cpp  column_interval_tree.hpp  grid.hpp  grid_search.cpp  grid_search.hpp  interval_tree.cpp  interval_tree.hpp  pillar_interval_tree.cpp  pillar_interval_tree.hpp  point_in_cell.cpp  point_in_cell.hpp
src/resfo_utilities/testing/: __init__.py  _egrid_generator.py  _summary_generator.py
tests/integration/: conftest.py  test_flow_grid.py  test_geometry.py  test_grid.py  test_rft_reader.py
tests/performance/: test_find_cell_performance.py
tests/unit/: test_cornerpoint_grid.py  test_cornerpont_grid.py  test_geometry.py  test_rft_reader.py  test_summary_keys.py  test_summary_reader.py
tests/unit/testing/: test_summary_generator.py
